# aos

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  Install AOS.command  README.md  bootstrap.sh  data  dev  install.sh  logs  ruff.toml
apps/mission-control/src-tauri/: Cargo.toml  tauri.conf.json
apps/mission-control/src-tauri/capabilities/: default.json
apps/mission-control/src-tauri/icons/: icon.icns
apps/mission-control/src-tauri/src/: lib.rs  main.rs
apps/mission-control/src-tauri/src/commands/: agents.rs  config.rs  mod.rs  system.rs  vault.rs  work.rs
core/qareen/: ARCHITECTURE.md  COMPANION-BUGS.md  __init__.py  main.py  pyproject.toml  requirements.txt  sse.py
core/qareen/actions/: __init__.py  messaging.py  work.py
core/qareen/agents/: registry.py  types.py
core/qareen/api/: __init__.py  agents.py  architect.py  assist.py  automations.py  channels.py  chat.py  companion.py  config.py  connectors.py  context.py  conversations.py  days.py  executions.py  flow_builder.py  ingest.py  integrations.py  intelligence.py  knowledge.py  meetings.py  metrics.py  models.py  notifications.py  people.py  pipelines.py  schemas.py  services.py  skills.py  suggestions.py  system.py  vault.py  work.py
core/qareen/channels/: apple_mail_desktop.py  bridge_listener.py  imessage_desktop.py  whatsapp_desktop.py
core/qareen/conversations/: __init__.py  store.py
core/qareen/events/: __init__.py  actions.py  audit.py  bus.py  types.py
core/qareen/intelligence/: auto_title.py  classifier.py  context.py  context_store.py  engine.py  generator.py  session.py  stream_processor.py  types.py
core/qareen/intelligence/pipelines/: __init__.py  action_detector.py  base.py  entity_resolver.py  research_trigger.py  voice_responder.py
core/qareen/ontology/: listeners.py  model.py  types.py  work_utils.py
core/qareen/ontology/adapters/: base.py  comms.py  config.py  intelligence.py  migrate_work.py  people.py  vault.py  work.py
core/qareen/pipelines/: engine.py  types.py
core/qareen/pipelines/definitions/: message_inbound.yaml  task_lifecycle.yaml
core/qareen/schemas/: actions.sql  comms.sql  metrics.sql  qareen.sql  sessions.sql
core/qareen/screen/: VISUAL-AUDIT.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
core/qareen/screen/designs/: qareen-work.pen
core/qareen/screen/public/: manifest.json
core/qareen/screen/src/: App.tsx  globals.css  index.css  main.tsx
core/qareen/screen/src/hooks/: useActionExecutor.ts  useAgentConfig.ts  useAgents.ts  useApprovals.ts  useArchitectSession.ts  useAssist.ts  useAttention.ts  useAudioAnalyser.ts  useAutomations.ts  useChannels.ts  useChatStream.ts  useChiefStream.ts  useCompanion.ts  useConfig.ts  useConnectorStatus.ts  useConnectors.ts  useCrons.ts  useExecutionRunner.ts  useExecutions.ts  useHealth.ts  useIntegrations.ts  useIntelligence.ts  useKnowledge.ts  useLiveMic.ts  useMetrics.ts  useModels.ts  useNotificationStream.ts  useNotifications.ts  usePageActions.tsx  usePeople.ts  usePhoneAudio.ts  usePipelines.ts  usePrayerAmbient.ts  useQareenVoice.ts  useQmdWarmup.ts  useQuickVoice.ts  useResources.ts  useSSE.ts  useServices.ts  useSkills.ts  (+7 more)
core/qareen/screen/src/lib/: api.ts  architect-types.ts  design.ts  format.ts  migrateLegacyChat.ts  prayer.ts  (+1 more)
core/qareen/voice/: __init__.py  manager.py  silero_vad.py  tts.py  websocket.py
core/services/bridge/: .inflight.json  README.md  activity_client.py  api_server.py  bridge_events.py  claude_cli.py  clickup_client.py  context_loader.py  daily_briefing.py  evening_checkin.py  execution_logger.py  heartbeat.py  intent_classifier.py  interactive_buttons.py  longform_handler.py  main.py  message_renderer.py  persistent_session.py  pyproject.toml  session_manager.py  shared_context.py  slack_channel.py  telegram_channel.py  telegram_formatter.py  telegraph_publisher.py  topic_manager.py  tracing.py  vault_tasks.py  voice_transcriber.py
core/services/bridge/tests/: test_session_manager.py
core/services/companion/: capture.py  engine.py  main.py  mic-client.py  pyproject.toml  setup-mic-client.sh  stt.py  tts.py  vad.py
core/services/dashboard/: README.md  activity.py  agent_registry.py  main.py  pyproject.toml
core/services/dashboard/static/: style.css
core/services/dashboard/templates/: agents.html  base.html  channels.html  conversations.html  crons.html  dashboard.html  docs.html  history.html  logs.html  meeting.html  session_detail.html  sessions.html  status.html  trust.html  work.html
core/services/listen/: README.md  main.py  pyproject.toml  worker.py
core/services/listen/jobs/: 01623599.yaml  092df174.yaml  0fc18b60.yaml  196f04ba.yaml  27575b45.yaml  3be4da6c.yaml  6770b430.yaml  7a58126d.yaml  fbf3ef21.yaml
core/services/memory/: README.md  indexer.py  main.py  pyproject.toml  watcher.py
core/services/transcriber/: README.md  client.py  engine.py  main.py  pyproject.toml
(+815 files in other folders)
