[project]
name = "aos-qareen"
version = "1.0.0"
description = "Qareen — AOS intelligence core. Single process serving API, SSE, WebSocket, and React frontend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "setproctitle>=1.3",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "onnxruntime>=1.19",
    "mlx-whisper>=0.4",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
