[project]
name = "agent-dashboard"
version = "0.1.0"
description = "Agent monitoring dashboard for Mac Mini Agent (Phase 6)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "activity", "agent_registry"]
