[project]
name = "listen"
version = "0.1.0"
description = "HTTP server + job manager for remote agent execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "pyyaml",
    "setproctitle>=1.3.0",
]

[tool.setuptools]
py-modules = ["main", "worker"]
