[project]
name = "agent-memory"
version = "0.1.0"
description = "Persistent semantic memory for Mac Mini Agent (Phase 4)"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.0",
    "mcp>=1.0.0",
    "watchfiles>=1.0.0",
    "pyyaml>=6.0",
    "setproctitle>=1.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["indexer", "main", "watcher"]
